Allow save or discard changed preferences

--- a/aria2 remote/Base.lproj/Main.storyboard
+++ b/aria2 remote/Base.lproj/Main.storyboard
@@ -29,11 +29,11 @@
             <objects>
                 <viewController id="PCL-sG-bnb" customClass="PreferencesViewController" sceneMemberID="viewController">
                     <view key="view" id="4wm-Jt-ie4">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="123"/>
+                        <rect key="frame" x="0.0" y="0.0" width="419" height="123"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kg7-ts-HR6">
-                                <rect key="frame" x="144" y="81" width="192" height="22"/>
+                                <rect key="frame" x="114" y="81" width="192" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="192" id="4qQ-AG-V7j"/>
                                 </constraints>
@@ -44,7 +44,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09B-Nx-chv">
-                                <rect key="frame" x="112" y="84" width="26" height="17"/>
+                                <rect key="frame" x="82" y="84" width="26" height="17"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Uri:" id="bIL-5e-foO">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -52,7 +52,7 @@
                                 </textFieldCell>
                             </textField>
                             <secureTextField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VyC-Rl-sGY">
-                                <rect key="frame" x="144" y="49" width="192" height="22"/>
+                                <rect key="frame" x="114" y="49" width="192" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="192" id="lA3-d1-A30"/>
                                 </constraints>
@@ -66,15 +66,38 @@
                                 </secureTextFieldCell>
                             </secureTextField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nlP-CB-JRs">
-                                <rect key="frame" x="93" y="51" width="45" height="17"/>
+                                <rect key="frame" x="63" y="51" width="45" height="17"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Token:" id="UEY-hU-CWU">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GVh-cF-VSb">
+                                <rect key="frame" x="323" y="13" width="82" height="32"/>
+                                <buttonCell key="cell" type="push" title="OK" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="WqT-6z-7xP">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="okButtonDidClick:" target="PCL-sG-bnb" id="gWb-im-Xh5"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0T8-v2-Gz9">
+                                <rect key="frame" x="241" y="13" width="82" height="32"/>
+                                <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GDJ-co-fWA">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                    <string key="keyEquivalent" base64-UTF8="YES">
+Gw
+</string>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="cancelButtonDidClick:" target="PCL-sG-bnb" id="TOr-Lb-rhi"/>
+                                </connections>
+                            </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="f3t-eP-IVf">
-                                <rect key="frame" x="138" y="13" width="139" height="32"/>
+                                <rect key="frame" x="14" y="13" width="139" height="32"/>
                                 <buttonCell key="cell" type="push" title="Test Connection" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Hes-BW-yRr">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -85,18 +108,24 @@
                             </button>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="f3t-eP-IVf" firstAttribute="leading" secondItem="4wm-Jt-ie4" secondAttribute="leading" constant="20" symbolic="YES" id="6Ra-56-rjU"/>
+                            <constraint firstItem="0T8-v2-Gz9" firstAttribute="width" secondItem="GVh-cF-VSb" secondAttribute="width" id="9Ib-wE-liI"/>
                             <constraint firstItem="kg7-ts-HR6" firstAttribute="leading" secondItem="09B-Nx-chv" secondAttribute="trailing" constant="8" symbolic="YES" id="Aqb-c5-dE3"/>
-                            <constraint firstItem="f3t-eP-IVf" firstAttribute="leading" secondItem="VyC-Rl-sGY" secondAttribute="leading" id="EKs-bJ-m2m"/>
+                            <constraint firstAttribute="bottom" secondItem="f3t-eP-IVf" secondAttribute="bottom" constant="20" symbolic="YES" id="EGe-Az-xmG"/>
+                            <constraint firstItem="0T8-v2-Gz9" firstAttribute="leading" secondItem="f3t-eP-IVf" secondAttribute="trailing" constant="100" id="EsW-4I-KBw"/>
                             <constraint firstItem="kg7-ts-HR6" firstAttribute="centerX" secondItem="4wm-Jt-ie4" secondAttribute="centerX" id="GYC-YK-hkv"/>
+                            <constraint firstItem="GVh-cF-VSb" firstAttribute="leading" secondItem="0T8-v2-Gz9" secondAttribute="trailing" constant="12" symbolic="YES" id="PfD-0O-FpF"/>
                             <constraint firstItem="VyC-Rl-sGY" firstAttribute="leading" secondItem="nlP-CB-JRs" secondAttribute="trailing" constant="8" symbolic="YES" id="QXu-SN-zCA"/>
                             <constraint firstItem="kg7-ts-HR6" firstAttribute="top" secondItem="4wm-Jt-ie4" secondAttribute="top" constant="20" symbolic="YES" id="YvU-1f-R81"/>
                             <constraint firstItem="nlP-CB-JRs" firstAttribute="centerY" secondItem="VyC-Rl-sGY" secondAttribute="centerY" id="Zoq-kY-cue"/>
+                            <constraint firstAttribute="bottom" secondItem="GVh-cF-VSb" secondAttribute="bottom" constant="20" symbolic="YES" id="dqw-A8-6fz"/>
+                            <constraint firstAttribute="bottom" secondItem="0T8-v2-Gz9" secondAttribute="bottom" constant="20" symbolic="YES" id="e83-tm-PbF"/>
                             <constraint firstItem="09B-Nx-chv" firstAttribute="centerY" secondItem="kg7-ts-HR6" secondAttribute="centerY" id="fvb-UT-Q7G"/>
                             <constraint firstItem="VyC-Rl-sGY" firstAttribute="leading" secondItem="kg7-ts-HR6" secondAttribute="leading" id="jCr-5Q-UOp"/>
-                            <constraint firstAttribute="bottom" secondItem="f3t-eP-IVf" secondAttribute="bottom" constant="20" symbolic="YES" id="k2A-O2-s3h"/>
                             <constraint firstItem="f3t-eP-IVf" firstAttribute="top" secondItem="VyC-Rl-sGY" secondAttribute="bottom" constant="8" id="pKk-oT-n8u"/>
                             <constraint firstItem="VyC-Rl-sGY" firstAttribute="top" secondItem="kg7-ts-HR6" secondAttribute="bottom" constant="10" symbolic="YES" id="qQ0-8w-yik"/>
                             <constraint firstItem="VyC-Rl-sGY" firstAttribute="trailing" secondItem="kg7-ts-HR6" secondAttribute="trailing" id="qfs-Fd-8aL"/>
+                            <constraint firstAttribute="trailing" secondItem="GVh-cF-VSb" secondAttribute="trailing" constant="20" symbolic="YES" id="x6L-1o-qHX"/>
                         </constraints>
                     </view>
                     <connections>
@@ -106,7 +135,7 @@
                 </viewController>
                 <customObject id="Bn2-FA-1mQ" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1099" y="-56"/>
+            <point key="canvasLocation" x="1107" y="-4"/>
         </scene>
         <!--Application-->
         <scene sceneID="JPo-4y-FX3">
