Alternate main view row background color

--- a/aria2 remote/Base.lproj/Main.storyboard
+++ b/aria2 remote/Base.lproj/Main.storyboard
@@ -1027,7 +1027,7 @@ Gw
                             <rect key="frame" x="1" y="0.0" width="448" height="299"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="hkc-fW-wnU" viewBased="YES" id="Asj-gg-Wcm">
+                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="hkc-fW-wnU" viewBased="YES" id="Asj-gg-Wcm">
                                     <rect key="frame" x="0.0" y="0.0" width="833" height="276"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
